--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "ang-music-player": "^0.0.4",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
     "ngx-bootstrap": "^10.2.0",
